try to write a NoAds.js
試著寫個把漫畫網站去廣告的js

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 	<link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+	<a href="javascript:d=document;s=d.createElement('script');s.src='js/NoAds.js';b=d.getElementsByTagName('body')[0];b.appendChild(s);void(0);">試著自己去廣告</a>
+
 	<div class="box">
 		<div class="door leftDoor"></div>
 		<div class="door rightDoor"></div>
 	</div>
 
 	<!-- <button class="push">push</button> -->
-
 
 
 	<script src="js/main.js"></script>
