--- a/index.html
+++ b/index.html
@@ -6,7 +6,21 @@
 	<link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-	<a href="javascript:d=document;s=d.createElement('script');s.src='js/NoAds.js';b=d.getElementsByTagName('body')[0];b.appendChild(s);void(0);">試著自己去廣告</a>
+	<a href="javascript:a = document.getElementsByClassName('gg_728'); 
+for (var i = 0; i < a.length; i++) {
+    a[i].parentNode.removeChild(a[i]);
+};
+
+b = document.getElementsByClassName('gg_950'); 
+for (var i = 0; i < b.length; i++) {
+    b[i].parentNode.removeChild(b[i]);
+};
+
+c = document.getElementsByClassName('gg_300');
+for (var i = 0; i < c.length; i++) {
+    c[i].parentNode.removeChild(c[i]);
+};
+window.stop() ;void(0);">試著自己去廣告</a>
 
 	<div class="box">
 		<div class="door leftDoor"></div>
